normalizing bsap actions

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -358,6 +358,12 @@ filter {
       }
     }
 
+    # for now, drop hex-encoded binary data for size
+    if ([zeek_cols][data]) {
+      mutate { id => "mutate_remove_field_zeek_bsap_ip_rdb_data"
+               remove_field => [ "[zeek_cols][data]" ] }
+    }
+
   } else if ([source] == "bsap_ip_unknown") {
     #############################################################################################################################
     # bsap_ip_unknown.log (dropped for now, see above)
@@ -457,6 +463,12 @@ filter {
       }
     }
 
+    # for now, drop hex-encoded binary data for size
+    if ([zeek_cols][data]) {
+      mutate { id => "mutate_remove_field_zeek_bsap_serial_rdb_data"
+               remove_field => [ "[zeek_cols][data]" ] }
+    }
+
   } else if ([source] == "bsap_serial_rdb_ext") {
     #############################################################################################################################
     # bsap_serial_rdb_ext.log
@@ -488,6 +500,12 @@ filter {
         "[zeek_cols][proto]" => "serial"
         "[zeek_cols][service]" => "bsap"
       }
+    }
+
+    # for now, drop hex-encoded binary data for size
+    if ([zeek_cols][data]) {
+      mutate { id => "mutate_remove_field_zeek_bsap_serial_rdb_ext_data"
+               remove_field => [ "[zeek_cols][data]" ] }
     }
 
   } else if ([source] == "bsap_serial_unknown") {
@@ -682,6 +700,12 @@ filter {
     mutate {
       id => "mutate_add_fields_zeek_cip_io"
       add_field => { "[zeek_cols][service]" => "cip" }
+    }
+
+    # for now, drop hex-encoded binary io_data for size
+    if ([zeek_cols][io_data]) {
+      mutate { id => "mutate_remove_field_zeek_cip_io_io_data"
+               remove_field => [ "[zeek_cols][io_data]" ] }
     }
 
   } else if ([source] == "dce_rpc") {
@@ -3262,16 +3286,6 @@ filter {
             end"
         }
       }
-    }
-
-  } else if ([source] == "cip_io") {
-    #############################################################################################################################
-    # cip_io.log specific logic
-
-    # for now, drop hex-encoded binary io_data for size
-    if ([zeek_cip_io][io_data]) {
-      mutate { id => "mutate_remove_field_zeek_cip_io_io_data"
-               remove_field => [ "[zeek_cip_io][io_data]" ] }
     }
 
   } else if ([source] == "dhcp") {
