--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -77,6 +77,36 @@ filter {
   if ([zeek_bacnet_property][pdu_service])      { mutate { id => "mutate_merge_normalize_zeek_bacnet_property_pdu_service"
                                                            merge => { "[zeek][action]" => "[zeek_bacnet_property][pdu_service]" } } }
 
+  if ([zeek_bsap_ip_rdb]) {
+    ruby {
+      # action = zeek_bsap_ip_rdb.app_func_code:zeek_bsap_ip_rdb.func_code
+      id => "ruby_zeek_bsap_ip_rdb_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_bsap_ip_rdb][app_func_code]'),
+                        event.get('[zeek_bsap_ip_rdb][func_code]')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
+    }
+  }
+
+  if ([zeek_bsap_serial_header][sfun])          { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_header_sfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_header][sfun]" } } }
+
+  if ([zeek_bsap_serial_header][dfun])          { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_header_dfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_header][dfun]" } } }
+
+  if ([zeek_bsap_serial_rdb][func_code])        { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_func_code"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb][func_code]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][sfun])         { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_sfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][sfun]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][dfun])         { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_dfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][dfun]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][extfun])       { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_extfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][extfun]" } } }
+
   if ([zeek_cip][cip_service])                  { mutate { id => "mutate_merge_normalize_zeek_cip_cip_service"
                                                            merge => { "[zeek][action]" => "[zeek_cip][cip_service]" } } }
 
