changes for Release 2.6.0 (new ICSNPP Zeek parsers) (#157)

--- a/logstash/maps/zeek_log_ecs_categories.yaml
+++ b/logstash/maps/zeek_log_ecs_categories.yaml
@@ -1,13 +1,25 @@
 "bacnet": ["ot", "network"]
+"bacnet_discovery": ["ot", "network"]
+"bacnet_property": ["ot", "network"]
+"bsap_ip_header": ["ot", "network"]
+"bsap_ip_rdb": ["ot", "network"]
+"bsap_ip_unknown": ["ot", "network"]
+"bsap_serial_header": ["ot", "network"]
+"bsap_serial_rdb": ["ot", "network"]
+"bsap_serial_rdb_ext": ["ot", "network"]
+"bsap_serial_unknown": ["ot", "network"]
 "cip": ["ot", "network"]
+"cip_identity": ["ot", "network"]
+"cip_io": ["ot", "network"]
 "conn": ["network"]
 "dce_rpc": ["network"]
 "dhcp": ["network"]
 "dnp3": ["ot", "network"]
+"dnp3_control": ["ot", "network"]
+"dnp3_objects": ["ot", "network"]
 "dns": ["network"]
 "dpd": ["network"]
 "enip": ["ot", "network"]
-"enip_list_identity": ["ot", "network"]
 "files": ["file"]
 "ftp": ["file", "network"]
 "gquic": ["network"]
@@ -23,6 +35,9 @@
 "ldap": ["authentication", "iam", "network"]
 "login": ["authentication", "network"]
 "modbus": ["ot", "network"]
+"modbus_detailed": ["ot", "network"]
+"modbus_mask_write_register": ["ot", "network"]
+"modbus_read_write_multiple_registers": ["ot", "network"]
 "modbus_register_change": ["ot", "network"]
 "mqtt_connect": ["network"]
 "mqtt_publish": ["network"]
