--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -68,20 +68,44 @@ filter {
   # Action ############################################################################################################
   # collect all actions/operations/commands under the parent [zeek][action] array
 
-  if ([zeek_bacnet]) {
-    # bacnet prefers service_choice, else see if we can glean action from NAK (negative acknowledgement) message
-    if ([zeek_bacnet][service_choice]) {
-      mutate { id => "mutate_merge_normalize_zeek_bacnet_service_choice"
-               merge => { "[zeek][action]" => "[zeek_bacnet][service_choice]" } }
-    } else if ([zeek_bacnet][data_dict][result] =~ / NAK$/) {
-      mutate { id => "mutate_add_field_metadata_zeek_bacnet_data_dict_result_action"
-               add_field => { "[@metadata][zeek_bacnet_action]" => "%{[zeek_bacnet][data_dict][result]}" } }
-      mutate { id => "mutate_gsub_zeek_bacnet_action"
-               gsub => [ "[@metadata][zeek_bacnet_action]", " NAK$", "" ] }
-      mutate { id => "mutate_merge_zeek_bacnet_action"
-               merge => { "[zeek][action]" => "[@metadata][zeek_bacnet_action]" } }
+  if ([zeek_bacnet][pdu_service])               { mutate { id => "mutate_merge_normalize_zeek_bacnet_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet][pdu_service]" } } }
+
+  if ([zeek_bacnet_discovery][pdu_service])     { mutate { id => "mutate_merge_normalize_zeek_bacnet_discovery_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet_discovery][pdu_service]" } } }
+
+  if ([zeek_bacnet_property][pdu_service])      { mutate { id => "mutate_merge_normalize_zeek_bacnet_property_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet_property][pdu_service]" } } }
+
+  if ([zeek_bsap_ip_rdb]) {
+    ruby {
+      # action = zeek_bsap_ip_rdb.app_func_code:zeek_bsap_ip_rdb.func_code
+      id => "ruby_zeek_bsap_ip_rdb_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_bsap_ip_rdb][app_func_code]'),
+                        event.get('[zeek_bsap_ip_rdb][func_code]')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
     }
   }
+
+  if ([zeek_bsap_serial_header][sfun])          { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_header_sfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_header][sfun]" } } }
+
+  if ([zeek_bsap_serial_header][dfun])          { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_header_dfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_header][dfun]" } } }
+
+  if ([zeek_bsap_serial_rdb][func_code])        { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_func_code"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb][func_code]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][sfun])         { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_sfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][sfun]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][dfun])         { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_dfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][dfun]" } } }
+
+  if ([zeek_bsap_serial_rdb_ext][extfun])       { mutate { id => "mutate_merge_normalize_zeek_bsap_serial_rdb_ext_extfun"
+                                                           merge => { "[zeek][action]" => "[zeek_bsap_serial_rdb_ext][extfun]" } } }
 
   if ([zeek_cip][cip_service])                  { mutate { id => "mutate_merge_normalize_zeek_cip_cip_service"
                                                            merge => { "[zeek][action]" => "[zeek_cip][cip_service]" } } }
@@ -94,6 +118,22 @@ filter {
 
   if ([zeek_dnp3][fc_request])                  { mutate { id => "mutate_merge_normalize_zeek_dnp3_fc_request"
                                                            merge => { "[zeek][action]" => "[zeek_dnp3][fc_request]" } } }
+
+  if ([zeek_dnp3_control]) {
+    ruby {
+      # action = function_code:operation_type:trip_control_code
+      id => "ruby_zeek_dnp3_control_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_dnp3_control][function_code]'),
+                        event.get('[zeek_dnp3_control][operation_type]'),
+                        event.get('[zeek_dnp3_control][trip_control_code]')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
+    }
+  }
+
+  if ([zeek_dnp3_read_objects][function_code])  { mutate { id => "mutate_merge_normalize_zeek_dnp3_read_objects"
+                                                           merge => { "[zeek][action]" => "[zeek_dnp3_read_objects][function_code]" } } }
 
   if ([zeek_dns]) {
     # action: query class and type
@@ -114,8 +154,8 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
   }
 
-  if ([zeek_enip][command])                     { mutate { id => "mutate_merge_normalize_zeek_enip_command"
-                                                           merge => { "[zeek][action]" => "[zeek_enip][command]" } } }
+  if ([zeek_enip][enip_command])                { mutate { id => "mutate_merge_normalize_zeek_enip_enip_command"
+                                                           merge => { "[zeek][action]" => "[zeek_enip][enip_command]" } } }
 
   if ([zeek_ftp][command])                      { mutate { id => "mutate_merge_normalize_zeek_ftp_command"
                                                            merge => { "[zeek][action]" => "[zeek_ftp][command]" } } }
@@ -146,6 +186,12 @@ filter {
 
   if ([zeek_modbus][func])                      { mutate { id => "mutate_merge_normalize_zeek_modbus_func"
                                                            merge => { "[zeek][action]" => "[zeek_modbus][func]" } } }
+
+  if ([zeek_modbus_mask_write_register][func])  { mutate { id => "mutate_merge_normalize_zeek_modbus_mask_write_register_func"
+                                                           merge => { "[zeek][action]" => "[zeek_modbus_mask_write_register][func]" } } }
+
+  if ([zeek_modbus_read_write_multiple_registers][func])  { mutate { id => "mutate_merge_normalize_zeek_modbus_read_write_multiple_registers"
+                                                            merge => { "[zeek][action]" => "[zeek_modbus_read_write_multiple_registers][func]" } } }
 
   if ([zeek_mqtt_connect][connect_status]) {
     # this log entry implicitly means "connect"
@@ -357,26 +403,19 @@ filter {
   # collect all result/status/response/errors under the parent [zeek][result] array
 
   if ([zeek_bacnet]) {
-    if ([zeek_bacnet][data_dict][result] =~ / NAK$/) {
-      # clean failure from NAK in data_dict.result
-      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_failure"
-               add_field => { "[@metadata][zeek_bacnet_result]" => "Failure" } }
-    } else if ([zeek_bacnet][data_dict][result] =~ /^Success/) {
-      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_success"
+    if ([zeek_bacnet][result_code]) {
+      mutate { id => "mutate_merge_normalize_zeek_bacnet_result_code"
+      merge => { "[zeek][result]" => "[zeek_bacnet][result_code]" } }
+    } else if ([zeek_bacnet][pdu_service]) {
+      mutate { id => "mutate_add_field_zeek_bacnet_success"
                add_field => { "[@metadata][zeek_bacnet_result]" => "Success" } }
-    } else if ([zeek_bacnet][apdu_type]) and ([zeek_bacnet][apdu_type] !~ /^apdu_type/) {
-      # use apdu_type as result (acknowledge, abort, request, etc.)
-      mutate { id => "mutate_add_field_zeek_bacnet_apdu_result"
-               add_field => { "[@metadata][zeek_bacnet_result]" => "%{[zeek_bacnet][apdu_type]}" } }
-    }
-    if ([@metadata][zeek_bacnet_result]) {
-      mutate { id => "mutate_merge_zeek_bacnet_result"
+      mutate { id => "mutate_merge_field_zeek_bacnet_success"
                merge => { "[zeek][result]" => "[@metadata][zeek_bacnet_result]" } }
     }
   }
 
-  if ([zeek_cip][status]) { mutate { id => "mutate_merge_normalize_zeek_cip_status_result"
-                                     merge => { "[zeek][result]" => "[zeek_cip][status]" } } }
+  if ([zeek_cip][cip_status]) { mutate { id => "mutate_merge_normalize_zeek_cip_status_result"
+                                         merge => { "[zeek][result]" => "[zeek_cip][cip_status]" } } }
 
   if ([zeek_dhcp]) {
     # dhcp server_message and client_message populate result, as do ACK and NAK message types
@@ -403,6 +442,10 @@ filter {
   if ([zeek_dnp3][iin_flags]) { mutate { id => "mutate_merge_zeek_dnp3_iin_flags"
                                          merge => { "[zeek][result]" => "[zeek_dnp3][iin_flags]" } } }
 
+  # dnp3_control.status_code
+  if ([zeek_dnp3_control][status_code]) { mutate { id => "mutate_merge_zeek_dnp3_control_status_code"
+                                                   merge => { "[zeek][result]" => "[zeek_dnp3_control][status_code]" } } }
+
   if ([zeek_dns]) {
     # DNS result is populated by rcode_name (with NOERROR being translated to Success), and rejected
     if ([zeek_dns][rcode_name]) {
@@ -423,6 +466,10 @@ filter {
                merge => { "[zeek][result]" => "[@metadata][zeek_dns_rejected_result]" } }
     }
   }
+
+  # zeek_enip.enip_status
+  if ([zeek_enip][enip_status])         { mutate { id => "mutate_merge_normalize_zeek_enip_enip_status"
+                                                   merge => { "[zeek][result]" => "[zeek_enip][enip_status]" } } }
 
   if ([zeek_ftp][reply_code]) {
     # normalized version of reply code (reply_msg is too unpredictable)
