Fix https://github.com/idaholab/Malcolm/issues/33 by setting zeek.uid to conn_uids[0] when available, for files.log

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1100,11 +1100,6 @@ filter {
       }
     }
 
-    mutate {
-      id => "mutate_add_fields_zeek_files"
-      add_field =>  { "[zeek_cols][uid]" => "%{[zeek_cols][fuid]}" }
-    }
-
     if ([zeek_cols][conn_uids]) and ([zeek_cols][conn_uids] != '(empty)') and ([zeek_cols][conn_uids] != '') {
       mutate { id => "mutate_split_zeek_files_conn_uids"
                split => { "[zeek_cols][conn_uids]" => "," } }
@@ -1119,8 +1114,16 @@ filter {
     }
 
     if ([zeek_cols][conn_uids] and [zeek_cols][conn_uids][0]) {
-      mutate { id => "mutate_add_field_zeek_files_conn_uids"
-               add_field => { "[rootId]" => "%{[zeek_cols][conn_uids][0]}" } }
+      mutate {
+        id => "mutate_add_field_zeek_files_conn_uids_to_uid"
+        add_field => { "[rootId]"         => "%{[zeek_cols][conn_uids][0]}"
+                       "[zeek_cols][uid]" => "%{[zeek_cols][conn_uids][0]}" }
+        }
+    } else {
+      mutate {
+        id => "mutate_add_fields_zeek_files_fuid_to_uid"
+        add_field =>  { "[zeek_cols][uid]" => "%{[zeek_cols][fuid]}" }
+      }
     }
 
     if ([zeek_cols][tx_hosts] and [zeek_cols][tx_hosts][0]) {
