--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,10 @@ http {
     server name-map-ui:8080;
   }
 
+  upstream docker-extracted-file-http-server {
+    server filemon:8440;
+  }
+
   # htadmin (htpasswd/user management)
   server {
     listen 488 ssl;
@@ -193,6 +197,12 @@ http {
       proxy_redirect off;
       proxy_set_header Host name-map-ui.malcolm.local;
       proxy_cache off;
+    }
+
+    location ~* ^/extracted-files\b(.*) {
+      proxy_pass http://docker-extracted-file-http-server$1;
+      proxy_redirect off;
+      proxy_set_header Host filemon.malcolm.local;
     }
 
     location = /favicon.ico {
