--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -55,6 +55,9 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_UPDATE_RULES : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA : 'false'
+  EXTRACTED_FILE_HTTP_SERVER_ENABLE : 'false'
+  EXTRACTED_FILE_HTTP_SERVER_ENCRYPT : 'true'
+  EXTRACTED_FILE_HTTP_SERVER_KEY : 'quarantined'
   # environment variables for tweaking Zeek at runtime (see local.zeek)
   # set to a non-blank value to disable the corresponding feature
   ZEEK_DISABLE_MITRE_BZAR : ''
@@ -540,6 +543,7 @@ services:
       - upload
       - htadmin
       - name-map-ui
+      - file-monitor
     ports:
       - "443:443"
       - "488:488"
