working on a few things:
* switching back from llvm to standard system compiler (gcc) as spicy no longer requires llvm. this simplifies the dependencies a lot.
* adding TFTP parser

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -225,6 +225,12 @@ filter {
       }
     }
 
+    if ([zeek_cols][service]) and ([zeek_cols][service] =~ /^spicy_/) {
+      # if it's coming from spicy, we don't care
+      mutate { id => "mutate_gsub_field_zeek_service_spicy"
+               gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
+    }
+
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
              add_field => { "[segmentCnt]" => "1" } }
 
@@ -2911,6 +2917,39 @@ filter {
       add_field => {
         "[zeek_cols][proto]" => "tcp"
         "[zeek_cols][service]" => "tds"
+      }
+    }
+
+  } else if ([source] == "tftp") {
+    #############################################################################################################################
+    # tftp.log
+    # https://github.com/zeek/spicy-tftp
+
+    dissect {
+      id => "dissect_zeek_tftp"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][wrq]}	%{[zeek_cols][fname]}	%{[zeek_cols][mode]}	%{[zeek_cols][uid_data]}	%{[zeek_cols][size]}	%{[zeek_cols][block_sent]}	%{[zeek_cols][block_acked]}	%{[zeek_cols][error_code]}	%{[zeek_cols][error_msg]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_tftp"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_tftp"
+        init => "$zeek_tftp_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'wrq', 'fname', 'mode', 'uid_data', 'size', 'block_sent', 'block_acked', 'error_code', 'error_msg' ]"
+        code => "event.set('[zeek_cols]', $zeek_tftp_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_tftp"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "tftp"
       }
     }
 
