--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -77,6 +77,10 @@ filter {
       "[zeek_smb_files][data_len_req]" => "integer"
       "[zeek_smb_files][data_len_rsp]" => "integer"
       "[zeek_smb_files][data_offset_req]" => "integer"
+      "[zeek_tftp][size]" => "integer"
+      "[zeek_tftp][block_sent]" => "integer"
+      "[zeek_tftp][block_acked]" => "integer"
+      "[zeek_tftp][error_code]" => "integer"
     }
   }
 
