--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -396,6 +396,18 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][zeek_tds_rpc_procedure_name_tmp]" } }
   }
 
+  if ([zeek_tftp][wrq]) {
+    if ([zeek_tftp][wrq] == "T") {
+      mutate { id => "mutate_add_field_zeek_tftp_wrq"
+               add_field => { "[@metadata][zeek_tftp_action]" => "Write" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_tftp_connect"
+               add_field => { "[@metadata][zeek_tftp_action]" => "Read" } }
+    }
+    mutate { id => "mutate_merge_zeek_tftp_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_tftp_action]" } }
+  }
+
   if ([zeek_tunnel][action])  { mutate { id => "mutate_merge_normalize_zeek_tunnel_action"
                                          merge => { "[zeek][action]" => "[zeek_tunnel][action]" } } }
 
@@ -767,6 +779,36 @@ filter {
     }
   }
 
+  if ([zeek_tftp]) {
+
+    if (![zeek_tftp][error_code]) and (![zeek_tftp][error_msg]) {
+      # no error, set as "success"
+      mutate { id => "mutate_add_field_zeek_tftp_result_success"
+               add_field => { "[@metadata][zeek_tftp_result_success]" => "Success" } }
+      mutate { id => "mutate_merge_zeek_tftp_result_success"
+                merge => { "[zeek][result]" => "[@metadata][zeek_tftp_result_success]" } }
+
+    } else {
+      # normalized version of reply code
+      translate {
+        id => "translate_zeek_tftp_error_code"
+        field => "[zeek_tftp][error_code]"
+        destination => "[@metadata][zeek_tftp_mapped_result]"
+        dictionary_path => "/etc/tftp_result_codes.yaml"
+      }
+      if ([@metadata][zeek_tftp_mapped_result]) {
+        mutate { id => "mutate_merge_zeek_tftp_mapped_result"
+                 merge => { "[zeek][result]" => "[@metadata][zeek_tftp_mapped_result]" } }
+      } else if ([zeek_tftp][error_msg]) {
+        mutate { id => "mutate_merge_zeek_tftp_error_msg_result"
+                 merge => { "[zeek][result]" => "[zeek_tftp][error_msg]" } }
+      } else {
+        mutate { id => "mutate_merge_zeek_tftp_error_code_result"
+                 merge => { "[zeek][result]" => "[zeek_tftp][error_code]" } }
+      }
+    }
+  }
+
   #####################################################################################################################
   # remove any duplicates from action and result
   if ([zeek][action]) {
@@ -869,6 +911,9 @@ filter {
 
   if ([zeek_smb_files][prev_name])              { mutate { id => "mutate_merge_normalize_zeek_smb_files_prev_name"
                                                            merge => { "[zeek][filename]" => "[zeek_smb_files][prev_name]" } } }
+
+  if ([zeek_tftp][fname])                       { mutate { id => "mutate_merge_normalize_zeek_tftp_fname"
+                                                           merge => { "[zeek][filename]" => "[zeek_tftp][fname]" } } }
 
   if ([zeek][filename]) {
     ruby {
