normalize tftp service

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -229,6 +229,12 @@ filter {
       # if it's coming from spicy, we don't care
       mutate { id => "mutate_gsub_field_zeek_service_spicy"
                gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
+
+      # normalize service string(s)
+      if ([zeek_cols][service] == "tftp_data") {
+        mutate { id => "mutate_replace_zeek_service_tftp_data"
+                 replace => { "[zeek_cols][service]" => "tftp" } }
+      }
     }
 
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
