added TFTP to insecure protocols

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -225,14 +225,14 @@ filter {
       }
     }
 
-    if ([zeek_cols][service]) and ([zeek_cols][service] =~ /^spicy_/) {
+    if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care
-      mutate { id => "mutate_gsub_field_zeek_service_spicy"
+      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy"
                gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
 
       # normalize service string(s)
       if ([zeek_cols][service] == "tftp_data") {
-        mutate { id => "mutate_replace_zeek_service_tftp_data"
+        mutate { id => "mutate_replace_zeek_conn_service_tftp_data"
                  replace => { "[zeek_cols][service]" => "tftp" } }
       }
     }
@@ -1533,6 +1533,18 @@ filter {
 
     mutate { id => "mutate_lowercase_zeek_known_services_service"
              lowercase => [ "[zeek_cols][service]" ] }
+
+    if ([zeek_cols][service] =~ /^spicy_/) {
+      # if it's coming from spicy, we don't care
+      mutate { id => "mutate_gsub_field_zeek_known_services_spicy"
+               gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
+
+      # normalize service string(s)
+      if ([zeek_cols][service] == "tftp_data") {
+        mutate { id => "mutate_replace_zeek_known_services_tftp_data"
+                 replace => { "[zeek_cols][service]" => "tftp" } }
+      }
+    }
 
   } else if ([source] == "ldap") {
     #############################################################################################################################
