Revert "testing/bullseye is kicking my butt, going to switch back and try buster again for a bit (will revert)"
This reverts commit 36959434f30c982f13f4783b8082913ac358322f.

--- a/sensor-iso/config/includes.binary/install/preseed_base.cfg
+++ b/sensor-iso/config/includes.binary/install/preseed_base.cfg
@@ -43,7 +43,27 @@ d-i apt-setup/use_mirror boolean false
 d-i finish-install/reboot_in_progress note
 
 d-i preseed/late_command string \
-  echo 'deb http://deb.debian.org/debian stable main contrib non-free' > /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian buster main contrib non-free' > /target/etc/apt/sources.list; \
+  echo 'deb http://security.debian.org/debian-security buster/updates main' >> /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian buster-updates main' >> /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian buster-backports main contrib non-free' >> /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian testing main contrib non-free' > /target/etc/apt/sources.list; \
+  echo 'APT::Default-Release "buster";' > /target/etc/apt/apt.conf; \
+  echo 'Package: bison,build-essential,cmake,python3,python3-dev,python3-pip,python3-setuptools,python3-wheel' > /target/etc/apt/preferences.d/pin; \
+  echo 'Pin: release a=testing' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin-Priority: 800' >> /target/etc/apt/preferences.d/pin; \
+  echo '' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Package: *' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin: release a=stable' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin-Priority: 700' >> /target/etc/apt/preferences.d/pin; \
+  echo '' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Package: *' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin: release a=buster-backports' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin-Priority: 650' >> /target/etc/apt/preferences.d/pin; \
+  echo '' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Package: *' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin: release a=testing' >> /target/etc/apt/preferences.d/pin; \
+  echo 'Pin-Priority: 600' >> /target/etc/apt/preferences.d/pin; \
   in-target touch /etc/capture_storage_format; \
   in-target bash /usr/local/bin/sensor-init.sh; \
   in-target bash -c "(dmidecode -s system-product-name | grep -q VMware) || apt-get purge -y open-vm-tools-desktop"; \
