--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-kibana.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-kibana.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - Kibana
-Exec=/usr/bin/chromium https://localhost/kibana/
+Exec=/opt/firefox/firefox https://localhost/kibana/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Icon=/usr/share/icons/hicolor/48x48/kibana.png
 Categories=Network;
-StartupWMClass=chromium
+StartupWMClass=Firefox
 StartupNotify=true
