--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-moloch.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-moloch.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - Arkime
-Exec=/usr/bin/chromium https://localhost/
+Exec=/opt/firefox/firefox https://localhost/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Icon=/usr/share/icons/hicolor/128x128/moloch.png
 Categories=Network;
-StartupWMClass=chromium
+StartupWMClass=Firefox
 StartupNotify=true
