--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -20,9 +20,18 @@ export PROTOLOGBEAT_INTERVAL=10
 export ZEEK_LOG_PATH=/home/sensor/bro_logs
 export ZEEK_MAX_DISK_FILL=90
 export ZEEK_PRUNE_CHECK_SECONDS=90
+
+# Zeek performance tuning (node.cfg, see idaholab/Malcolm#36 for details)
+export ZEEK_PIN_CPUS_LOGGER=
+export ZEEK_PIN_CPUS_MANAGER=
+export ZEEK_PIN_CPUS_PROXY=
+# zeekdeploy.sh will also use (if present, where n is the number of capture interfaces):
+# - ZEEK_PIN_CPUS_WORKER_1 .. ZEEK_PIN_CPUS_WORKER_n
+# - ZEEK_LB_PROCS_WORKER_1 .. ZEEK_LB_PROCS_WORKER_n (falling back to ZEEK_LB_PROCS)
 export ZEEK_LB_PROCS=1
 export ZEEK_LB_METHOD=custom
 export ZEEK_AF_PACKET_BUFFER_SIZE=67108864
+
 export ZEEK_RULESET=local
 export ZEEK_EXTRACTOR_MODE=none
 export ZEEK_EXTRACTOR_OVERRIDE_FILE=
