--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -48,7 +48,7 @@ autostart=%(ENV_AUTOSTART_HEATBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/heatbeat
 
 [program:sensors]
-command=/usr/bin/python3.7 /usr/local/bin/beat-log-temperature.py -p %(ENV_PROTOLOGBEAT_PORT)s -c 0 -s %(ENV_PROTOLOGBEAT_INTERVAL)s
+command=/usr/bin/python3 /usr/local/bin/beat-log-temperature.py -p %(ENV_PROTOLOGBEAT_PORT)s -c 0 -s %(ENV_PROTOLOGBEAT_INTERVAL)s
 startsecs=5
 startretries=3
 stopasgroup=true
