--- a/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
@@ -13,7 +13,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:watcher]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_watcher.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_watcher.py
   --start-sleep 90
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
@@ -27,7 +27,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:virustotal]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --vtot-api "%(ENV_VTOT_API2_KEY)s"
 startsecs=30
@@ -39,7 +39,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:clamav]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --clamav %(ENV_ZEEK_FILE_SCAN_CLAMAV)s
   --clamav-socket "%(ENV_SUPERVISOR_PATH)s/clamav/clamd.ctl"
@@ -52,7 +52,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:yara]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --yara %(ENV_ZEEK_FILE_SCAN_YARA)s
   --yara-custom-only "%(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s"
@@ -65,7 +65,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:capa]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --capa %(ENV_ZEEK_FILE_SCAN_CAPA)s
   --capa-rules "%(ENV_CAPA_RULES_DIR)s"
@@ -79,7 +79,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:malass]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --malass-host "%(ENV_MALASS_HOST)s"
   --malass-port %(ENV_MALASS_PORT)s
@@ -92,7 +92,7 @@ directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
 [program:logger]
-command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_logger.py
+command=/usr/bin/python3 /usr/local/bin/zeek_carve_logger.py
   --start-sleep 10
   --preserve "%(ENV_EXTRACTED_FILE_PRESERVATION)s"
   --directory "%(ENV_ZEEK_LOG_PATH)s/extract_files"
