--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-mapping.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-mapping.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - Host and Subnet Name Mapping
-Exec=/usr/bin/chromium https://localhost/name-map-ui/
+Exec=/opt/firefox/firefox https://localhost/name-map-ui/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Icon=server.png
 Categories=Network;
-StartupWMClass=chromium
+StartupWMClass=Firefox
 StartupNotify=true
