--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-users.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-users.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - User Management
-Exec=/usr/bin/chromium https://localhost:488/
+Exec=/opt/firefox/firefox https://localhost:488/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Icon=config-users.png
 Categories=Network;
-StartupWMClass=chromium
+StartupWMClass=Firefox
 StartupNotify=true
