more work on 2.6.1 development, including
* providing download links for quarantined/extracted files if they exist
* improvements to PE dashboard
* normalize zeek_files.extracted to zeek.filename

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -897,6 +897,9 @@ filter {
   if ([zeek_files][filename])                   { mutate { id => "mutate_merge_normalize_zeek_files_filename"
                                                            merge => { "[zeek][filename]" => "[zeek_files][filename]" } } }
 
+  if ([zeek_files][extracted])                  { mutate { id => "mutate_merge_normalize_zeek_files_extracted"
+                                                           merge => { "[zeek][filename]" => "[zeek_files][extracted]" } } }
+
   if ([zeek_http][orig_filenames])              { mutate { id => "mutate_merge_normalize_zeek_http_orig_filenames"
                                                            merge => { "[zeek][filename]" => "[zeek_http][orig_filenames]" } } }
 
