--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -170,6 +170,14 @@ http {
       proxy_set_header Authorization "";
     }
 
+    # Kibana/Arkime -> extracted file download
+    location ~* /dl-extracted-files/(.*) {
+      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
+      proxy_pass http://docker-extracted-file-http-server;
+      proxy_redirect off;
+      proxy_set_header Host filemon.malcolm.local;
+    }
+
     # already prepended /kibana to match the server.basePath in kibana's YML config file
     location /kibana {
       proxy_pass http://docker-kibana;
@@ -279,6 +287,14 @@ http {
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
+    }
+
+    # Kibana -> extracted file download
+    location ~* /dl-extracted-files/(.*) {
+      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
+      proxy_pass http://docker-extracted-file-http-server;
+      proxy_redirect off;
+      proxy_set_header Host filemon.malcolm.local;
     }
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
