added filemon virtual_host

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -346,6 +346,7 @@ services:
     environment:
       << : *process-variables
       << : *zeek-variables
+      VIRTUAL_HOST : 'filemon.malcolm.local'
     expose:
       - 3310
       - 8440
