--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -377,6 +377,7 @@ services:
     environment:
       << : *process-variables
       << : *zeek-variables
+      VIRTUAL_HOST : 'filemon.malcolm.local'
     expose:
       - 3310
       - 8440
