added depends for nginx upstream

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -512,6 +512,7 @@ services:
       - upload
       - htadmin
       - name-map-ui
+      - file-monitor
     ports:
       - "443:443"
       - "488:488"
