--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -564,6 +564,7 @@ services:
       - upload
       - htadmin
       - name-map-ui
+      - file-monitor
     ports:
       - "443:443"
       - "488:488"
