--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -373,11 +373,11 @@ services:
     restart: "no"
     stdin_open: false
     tty: true
-    hostname: filemon
+    hostname: file-monitor
     environment:
       << : *process-variables
       << : *zeek-variables
-      VIRTUAL_HOST : 'filemon.malcolm.local'
+      VIRTUAL_HOST : 'file-monitor.malcolm.local'
     expose:
       - 3310
       - 8440
