--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,7 +66,7 @@ http {
   }
 
   upstream docker-extracted-file-http-server {
-    server filemon:8440;
+    server file-monitor:8440;
   }
 
   # htadmin (htpasswd/user management)
@@ -171,7 +171,7 @@ http {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
       proxy_pass http://docker-extracted-file-http-server;
       proxy_redirect off;
-      proxy_set_header Host filemon.malcolm.local;
+      proxy_set_header Host file-monitor.malcolm.local;
     }
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
@@ -206,7 +206,7 @@ http {
     location ~* ^/extracted-files\b(.*) {
       proxy_pass http://docker-extracted-file-http-server$1;
       proxy_redirect off;
-      proxy_set_header Host filemon.malcolm.local;
+      proxy_set_header Host file-monitor.malcolm.local;
     }
 
     location = /favicon.ico {
@@ -290,7 +290,7 @@ http {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
       proxy_pass http://docker-extracted-file-http-server;
       proxy_redirect off;
-      proxy_set_header Host filemon.malcolm.local;
+      proxy_set_header Host file-monitor.malcolm.local;
     }
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
