for idaholab/Malcolm#38, don't automatically open port 9200 for elasticsearch unless configured to do so

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -237,31 +237,6 @@ http {
     }
   }
 
-  # Upload interface
-  server {
-    listen 8443 ssl;
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    location = /favicon.ico {
-      alias /etc/nginx/favicon.ico;
-    }
-
-    location / {
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_pass http://docker-upload;
-      proxy_redirect off;
-      proxy_set_header Host upload.malcolm.local;
-      proxy_request_buffering off;
-      proxy_buffering off;
-      client_max_body_size 20G;
-    }
-  }
-
   # Kibana interface
   server {
     listen 5601 ssl;
@@ -317,6 +292,15 @@ http {
 
     # use either auth_basic or auth_ldap
     include /etc/nginx/nginx_auth_rt.conf;
+
+    # Port 9200 is more robustly restricted by ports value in docker-compose.yml
+    # (whether or not to permit access), and, of course, authentication. But
+    # we'll also pluck the low-hanging fruit of restricting to
+    # beats (Go-http-client, see https://github.com/elastic/beats/issues/21975)
+    # and moloch-capture user agents.
+    if ($http_user_agent !~* ^(arkime|beats|elastic|go-http-client|logstash)) {
+      return 403;
+    }
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
