related to idaholab/Malcolm#38, whitelist htpdate

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -298,7 +298,7 @@ http {
     # we'll also pluck the low-hanging fruit of restricting to
     # beats (Go-http-client, see https://github.com/elastic/beats/issues/21975)
     # and moloch-capture user agents.
-    if ($http_user_agent !~* ^(arkime|beats|elastic|go-http-client|logstash)) {
+    if ($http_user_agent !~* ^(arkime|beats|elastic|go-http-client|htpdate|logstash)) {
       return 403;
     }
 
